// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render > renders a collection page for an entry with the entry path in the head 1`] = `
"<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Post</title>
<meta name="robots" content="noindex">
<link rel="canonical" href="https://example.com/blog/hello-world">
<meta property="og:type" content="website">
<meta property="og:title" content="Post">
<meta property="og:site_name" content="Fixture Co">
<meta property="og:locale" content="en">
<meta property="og:url" content="https://example.com/blog/hello-world">
<meta name="twitter:card" content="summary">
<link rel="preload" as="font" type="font/woff2" href="/assets/abcdef0123456789abcdef0123456789abcdef0123456789abcdef0123456789.woff2" crossorigin>
<style>@font-face{font-family:"Fixture Sans";src:url("/assets/abcdef0123456789abcdef0123456789abcdef0123456789abcdef0123456789.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap}@font-face{font-family:"Fixture Sans";src:url("/assets/9876543210fedcba9876543210fedcba9876543210fedcba9876543210fedcba.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap}</style>
</head>
<body><main class="page container"><h1 class="heading">Hello world</h1><div><p>The first post.</p></div><video controls playsinline src="/assets/fedcba9876543210fedcba9876543210fedcba9876543210fedcba9876543210.mp4"></video><blockquote>Embedded quote</blockquote></main></body>
</html>
"
`;

exports[`render > renders the fixture home page 1`] = `
"<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Fixture Co</title>
<meta name="description" content="A fixture site.">
<meta property="og:type" content="website">
<meta property="og:title" content="Fixture Co">
<meta property="og:site_name" content="Fixture Co">
<meta property="og:locale" content="en">
<meta property="og:description" content="A fixture site.">
<meta name="twitter:card" content="summary">
<link rel="preload" as="font" type="font/woff2" href="/assets/abcdef0123456789abcdef0123456789abcdef0123456789abcdef0123456789.woff2" crossorigin>
<style>@font-face{font-family:"Fixture Sans";src:url("/assets/abcdef0123456789abcdef0123456789abcdef0123456789abcdef0123456789.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap}@font-face{font-family:"Fixture Sans";src:url("/assets/9876543210fedcba9876543210fedcba9876543210fedcba9876543210fedcba.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap}</style>
</head>
<body><main class="page"><section class="container hero"><div><h1 class="heading ff-l-hero-title">Design it. Publish it. Own it.</h1><img alt="A blue rectangle standing in for a hero image" decoding="async" height="800" loading="eager" sizes="100vw" src="/assets/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef.png" width="1200"><a class="button primary" data-freeflow-motion="" href="/blog">Read the blog</a></div></section><div class="container post-grid"><article class="card"><h3>Third post</h3></article><article class="card"><h3>Second post</h3></article><article class="card"><h3>Hello world</h3></article></div></main></body>
</html>
"
`;
